<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.shvikanitzani.ourhome.LoginActivity"
    android:background="#ff0000ff">

    <EditText   android:id="@+id/edit_text_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint = "@string/login_username"
        android:textColor="#ffffffff"
        android:textColorHint="@android:color/darker_gray" />

    <EditText   android:id="@+id/edit_text_login_password"
        android:layout_below="@id/edit_text_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint = "@string/login_password"
        android:inputType="textPassword"
        android:textColor="#ffffffff"
        android:textColorHint="@android:color/darker_gray" />
    
    <Button
        android:id="@+id/login_submit_button"
        android:text="@string/login_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_login_password"
        android:background="#ff2ab5ff" />

    <ImageView
        android:layout_width="113dp"
        android:layout_height="113dp"
        android:id="@+id/imageView2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="131dp"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/description" />

</RelativeLayout>
