<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.shvikanitzani.ourhome.InputWebsiteTodoActivity"
    android:background="@color/app_background_blue">

    <EditText android:id="@+id/edittext_website_todo_subject" android:hint="@string/prompt_website_todo_subject" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="#ffffffff" />

    <EditText android:id="@+id/edittext_website_todo_details" android:hint="@string/prompt_website_todo_details" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_below="@id/edittext_website_todo_subject"
        android:textColor="#ffffffff"
        android:textColorHint="@android:color/darker_gray" />

    <Button android:id="@+id/button_website_todo_submit"
        android:text="@string/button_submit_todo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_website_todo_details"
        android:background="#ff2ab5ff" />

    <ImageView
        android:layout_width="113dp"
        android:layout_height="113dp"
        android:id="@+id/imageView2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="131dp"
        android:src="@mipmap/ic_launcher" />

</RelativeLayout>
